2017-02-23  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amcleanupdisk.pl: Fix renaming tmp holding file

2017-02-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	Patch by Charles Curley
	* common-src/ammessage.c: Fix message
	* man/xml-source/amanda.8.xml: Fix documentation

2017-02-21  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/tapefile.c (nb_tape_in_storage): Fix for older glib2

2017-02-21  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/ambind.c: Print 'WARNING:' prefix if we should retry on
	  a different port
	* common-src/amutil.c: Parse 'WARNING:' prefix
	* common-src/stream.c, common-src/dgram.c: Handle retry
	* common-src/security-file.c (security_allow_bind): Check the port
	  have no name

2017-02-21  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/tapefile.c (nb_tape_in_storage): Use g_strcmp0

2017-02-20  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amtape.pl: Add a drive argument to 'amtape slot'
	* perl/Amanda/Changer/robot.pm (load_unlocked): Use the drive argument
	* man/xml-source/amtape.8.xml: Document it
	* NEWS: Document it

2017-02-20  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/security-file.c: Parse tcp_port_range and udp_port_range
	* common-src/security-file.c (security_allow_bind): New function to
	  verify if the port is in tcp_port_range and udp_port_range
	* common-src/security-file.h (security_allow_bind): Add prototype
	* common-src/make_security_file.c: Add tcp_port_range and
	  udp_port_range in the default amanda-security.conf file
	* common-src/dgram.c (dgram_bind): Add bind_msg argument
	* common-src/dgram.h (dgram_bind): New prototype
	* common-src/stream.c (stream_client_addr, stream_client_privileged,
	  stream_client): Add stream_msg argument
	* common-src/stream.h (stream_client_addr, stream_client_privileged,
	  stream_client): New prototype
	* common-src/amutil.c (connect_portrange): Add stream_msg argument